--- a/mainRoot/core/templates/attendance.html
+++ b/mainRoot/core/templates/attendance.html
@@ -1,10 +1,124 @@
-<!DOCTYPE html>
+<!doctype html>
+{%load static%}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Datepicker</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/date_picker.css' %}">
 </head>
-<body>
-    <h1>Here we mark attendance</h1>
+
+
+<body style="background-color: ivory;">
+<div class="container mt-2">
+  <div class="justify-content-center" align="center">
+    <div class="col-md-5 content_col">
+        <form action="{% url 'mark_attendance' %}" method="POST">
+        {% csrf_token %}
+        <h1>SnapRoll For Teachers</h1>
+        <div class="form-group col-md-6">
+          <label for="inputState">Choose the Faculty</label>
+          <select id="inputState" class="form-control" name="faculty" required>
+            <option selected>B. Sc (IT)</option>
+            <option>B. TECH (CSE)</option>
+            <option>IFS</option>
+            <option>BBA</option>
+            <option>BA(TA)</option>
+            <option>BA (H) Eco</option>
+          </select>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputState">Semester</label>
+              <select id="inputState" class="form-control" name="semester" required>
+                <option selected>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+              </select>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputState">Section</label>
+              <select id="inputState" class="form-control" name="section" required>
+                <option selected>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+              </select>
+            </div>
+        </div>
+      <div class="form-group">
+        <label for="inputEnrollment">Room №</label>
+        <input type="number" class="form-control" id="inputEnrollment" placeholder="Ex: 215" name="room number" maxlength="12" required>
+      </div>
+        <div>
+            <br>
+          <label>
+            <input type="text" class="dateselect" name="date" required="required"/>
+            <span>Choose the Date</span>
+          </label>
+        </div>
+          <button type="submit" class="btn btn-outline-success btn-lg">Start Marking Attendance</button>
+        </form>
+    </div>
+  </div>
+</div>
+
+<!--<div class="container mt-3">-->
+<!--  <div class="justify-content-center" align="center">-->
+<!--    <div class="col-md-4 content_col">-->
+<!--          <div class="form-row">-->
+<!--            <div class="form-group col-md-6">-->
+<!--              <label for="inputState">Faculty | Program</label>-->
+<!--              <select id="inputState" class="form-control" name="faculty" required>-->
+<!--                <option selected>B. Sc (IT)</option>-->
+<!--                <option>B. TECH (CSE)</option>-->
+<!--                <option>IFS</option>-->
+<!--                <option>BBA</option>-->
+<!--                <option>BA(TA)</option>-->
+<!--                <option>BA (H) Eco</option>-->
+<!--              </select>-->
+<!--            </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+
+
+<!--    <div class="wrapper">-->
+<!--        <label>-->
+
+<!--        </label>-->
+<!--      <label>-->
+<!--        <input type="text" required="required"/>-->
+<!--        <span>Name</span>-->
+<!--      </label>-->
+<!--      <label>-->
+<!--        <input type="text" class="dateselect" required="required"/>-->
+<!--        <span>Date</span>-->
+<!--      </label>-->
+<!--      <label>-->
+<!--        <input type="text" class="dateselect2" required="required"/>-->
+<!--        <span>Date</span>-->
+<!--      </label>-->
+<!--      <button class="btn btn-outline-success btn-lg">Start Marking Attendance</button>-->
+<!--    </div>-->
+<!--    </body>-->
 </body>
+<script>
+    $('.dateselect').datepicker({
+    format: 'mm/dd/yyyy',
+    startDate: '-d'
+    });
+</script>
 </html>
