--- a/mainRoot/core/templates/registered.html
+++ b/mainRoot/core/templates/registered.html
@@ -7,7 +7,11 @@
 
 </head>
 <body>
-          <h2 style="text-align:center;margin-top:50px;font-size:50px;">You successfully registered!</h2>
-
+    <h2 style="text-align:center;margin-top:50px;font-size:50px;">You successfully registered!</h2>
+    <a href="#">
+        <button type="button" style="btn btn-success">
+            Go Back
+        </button>
+    </a>
 </body>
 </html>
